--- a/padrao.APP/src/app/modules/excursoes/cadastrar-excursao/cadastrar-excursao.component.html
+++ b/padrao.APP/src/app/modules/excursoes/cadastrar-excursao/cadastrar-excursao.component.html
@@ -70,11 +70,17 @@
                                         placeholder="Data Ínicio"
                                         [formControlName]="'dataIncio'"
                                         required
+                                        (dateChange)="
+                                            this.setDatasSelecionadas()
+                                        "
                                     />
                                     <input
                                         matEndDate
                                         placeholder="Data Fim"
                                         [formControlName]="'dataFim'"
+                                        (dateChange)="
+                                            this.setDatasSelecionadas()
+                                        "
                                         required
                                     />
                                 </mat-date-range-input>
@@ -92,26 +98,39 @@
                         <div class="flex flex-row items-center justify-center">
                             <mat-form-field
                                 appearance="outline"
-                                class="fuse-mat-no-subscript w-2/3 mr-4 sm:w-35"
+                                class="fuse-mat-no-subscript w-2/3 mr-4 sm:w-2/5"
                             >
                                 <mat-label>Data de saída</mat-label>
                                 <input
                                     matInput
                                     [formControlName]="'dataSaida'"
                                     [matDatepicker]="DataSaida"
-                                    type="datetime-local"
                                     required
+                                    (dateChange)="this.validarDataSaida()"
                                 />
                                 <mat-datepicker-toggle
                                     matSuffix
                                     [for]="DataSaida"
                                 ></mat-datepicker-toggle>
                                 <mat-datepicker #DataSaida></mat-datepicker>
-                                <mat-hint>Data embarque</mat-hint>
+                                <mat-hint>Data saída</mat-hint>
                             </mat-form-field>
                             <mat-form-field
                                 appearance="outline"
-                                class="fuse-mat-no-subscript w-2/3 sm:w-35"
+                                class="fuse-mat-no-subscript mr-4 sm:w-10-p"
+                            >
+                                <mat-label>Hora saída</mat-label>
+                                <input
+                                    matInput
+                                    [formControlName]="'horaEmbarque'"
+                                    required
+                                    type="time"
+                                />
+                                <mat-hint>Hora do saída</mat-hint>
+                            </mat-form-field>
+                            <mat-form-field
+                                appearance="outline"
+                                class="fuse-mat-no-subscript w-2/3 mr-4 sm:w-2/5"
                             >
                                 <mat-label>Data de retorno</mat-label>
                                 <input
@@ -119,12 +138,26 @@
                                     [formControlName]="'dataRetorno'"
                                     [matDatepicker]="DataRetorno"
                                     required
+                                    (dateChange)="this.validarDataRetorno()"
                                 />
                                 <mat-datepicker-toggle
                                     matSuffix
                                     [for]="DataRetorno"
                                 ></mat-datepicker-toggle>
                                 <mat-datepicker #DataRetorno></mat-datepicker>
+                            </mat-form-field>
+                            <mat-form-field
+                                appearance="outline"
+                                class="fuse-mat-no-subscript mr-4 sm:w-10-p"
+                            >
+                                <mat-label>Hora retorno</mat-label>
+                                <input
+                                    matInput
+                                    [formControlName]="'horaRetorno'"
+                                    required
+                                    type="time"
+                                />
+                                <mat-hint>Hora do retorno</mat-hint>
                             </mat-form-field>
                         </div>
 
@@ -152,64 +185,7 @@
                         #horizontalStepperStep2
                     >
                         <ng-template matStepLabel>Profile</ng-template>
-                        <p class="my-6 font-medium">
-                            People here will get to know you with this
-                            information
-                        </p>
-                        <div class="flex flex-col gt-xs:flex-row">
-                            <mat-form-field class="flex-auto gt-xs:pr-3">
-                                <input
-                                    matInput
-                                    [formControlName]="'firstName'"
-                                    [placeholder]="'First name'"
-                                    required
-                                />
-                                <mat-icon
-                                    class="icon-size-5"
-                                    matPrefix
-                                    [svgIcon]="'heroicons_solid:user-circle'"
-                                ></mat-icon>
-                            </mat-form-field>
-                            <mat-form-field class="flex-auto gt-xs:pl-3">
-                                <input
-                                    matInput
-                                    [formControlName]="'lastName'"
-                                    [placeholder]="'Last name'"
-                                    required
-                                />
-                                <mat-icon
-                                    class="icon-size-5"
-                                    matPrefix
-                                    [svgIcon]="'heroicons_solid:user-circle'"
-                                ></mat-icon>
-                            </mat-form-field>
-                        </div>
-                        <div class="flex">
-                            <mat-form-field class="flex-auto">
-                                <input
-                                    matInput
-                                    [formControlName]="'userName'"
-                                    [placeholder]="'Username'"
-                                    required
-                                />
-                                <span matPrefix>www.example.com/</span>
-                            </mat-form-field>
-                        </div>
-                        <div class="flex">
-                            <mat-form-field class="fuse-mat-textarea flex-auto">
-                                <textarea
-                                    matInput
-                                    [formControlName]="'about'"
-                                    [placeholder]="'About'"
-                                    [rows]="3"
-                                ></textarea>
-                                <mat-icon
-                                    class="icon-size-5"
-                                    matPrefix
-                                    [svgIcon]="'heroicons_solid:menu-alt-2'"
-                                ></mat-icon>
-                            </mat-form-field>
-                        </div>
+
                         <div class="flex justify-end">
                             <button
                                 class="px-8 mr-2"
@@ -242,68 +218,7 @@
                         [stepControl]="this.form.get('step3')"
                     >
                         <ng-template matStepLabel>Notifications</ng-template>
-                        <p class="my-6 font-medium">
-                            We'll always let you know about important changes,
-                            but you pick what else you want to hear about.
-                        </p>
-                        <div class="flex flex-col gt-sm:flex-row">
-                            <div class="flex flex-col">
-                                <span class="font-medium mb-2">By Email</span>
-                                <div
-                                    class="flex flex-col"
-                                    [formGroupName]="'byEmail'"
-                                >
-                                    <mat-checkbox
-                                        class="mb-1"
-                                        [color]="'primary'"
-                                        [formControlName]="'companyNews'"
-                                    >
-                                        Company News
-                                    </mat-checkbox>
-                                    <mat-checkbox
-                                        class="mb-1"
-                                        [color]="'primary'"
-                                        [formControlName]="'featuredProducts'"
-                                    >
-                                        Featured Products
-                                    </mat-checkbox>
-                                    <mat-checkbox
-                                        [color]="'primary'"
-                                        [formControlName]="'messages'"
-                                    >
-                                        Messages
-                                    </mat-checkbox>
-                                </div>
-                            </div>
-                            <div
-                                class="flex flex-col mt-8 gt-sm:mt-0 gt-sm:ml-16"
-                            >
-                                <span class="font-medium mb-2"
-                                    >Push Notifications</span
-                                >
-                                <mat-radio-group
-                                    class="flex flex-col"
-                                    [color]="'primary'"
-                                    [formControlName]="'pushNotifications'"
-                                >
-                                    <mat-radio-button
-                                        class="mb-2"
-                                        [value]="'everything'"
-                                    >
-                                        Everything
-                                    </mat-radio-button>
-                                    <mat-radio-button
-                                        class="mb-2"
-                                        [value]="'just-good'"
-                                    >
-                                        Just the good stuff
-                                    </mat-radio-button>
-                                    <mat-radio-button [value]="'no-push'">
-                                        No push notifications
-                                    </mat-radio-button>
-                                </mat-radio-group>
-                            </div>
-                        </div>
+
                         <div class="flex justify-end mt-8">
                             <button
                                 class="px-8 mr-2"
@@ -328,10 +243,7 @@
 
                     <mat-step>
                         <ng-template matStepLabel>Done</ng-template>
-                        <p class="my-6 font-medium">
-                            Thank you for completing our form! You can reset the
-                            form if you would like to change your information.
-                        </p>
+
                         <div class="flex justify-end mt-8">
                             <button
                                 class="px-8 mr-2"
